# coconut-editor

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-windows.yml  build.yml
src/: clipitem.cpp  clipitem.h  effects.h  industrial.qss  main.cpp  mainwindow.cpp  mainwindow.h  nebula.qss  timelinewidget.cpp  timelinewidget.h
